@@ -1,3 +1,3 @@
 [info]
 apiVersion=0.7.6.3
-version=0.6.6.3
+version=0.6.6.5
